@@ -17,6 +17,7 @@ import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.util.Unit;
 import net.minecraft.world.item.TooltipFlag;
 import net.minecraft.world.item.component.ItemLore;
+import org.jetbrains.annotations.Nullable;
 import org.pokesplash.gts.Gts;
 import org.pokesplash.gts.Listing.ItemListing;
 import org.pokesplash.gts.Listing.Listing;
@@ -26,12 +27,15 @@ import org.pokesplash.gts.UI.button.*;
 import org.pokesplash.gts.UI.module.ListingInfo;
 import org.pokesplash.gts.UI.module.PokemonInfo;
 import org.pokesplash.gts.api.provider.ListingAPI;
+import org.pokesplash.gts.enumeration.Sort;
 import org.pokesplash.gts.util.Utils;
 
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * UI of the Pokemon Listings page.
@@ -42,14 +46,33 @@ public class AllListings {
 	 * Method that returns the page.
 	 * @return Pokemon Listings page.
 	 */
-	public Page getPage() {
-
+	public Page getPage(FilterType filter, Sort sort, @Nullable String searchValue) {
 		PlaceholderButton placeholder = new PlaceholderButton();
 
 		List<Button> buttons = new ArrayList<>();
 
 		List<Listing> listings = ListingAPI.getHighestPriority() == null ? Gts.listings.getListings() :
-				Gts.listings.getListings().stream().map(Listing::deepClone).toList();
+				Gts.listings.getListings().stream().map(Listing::deepClone).collect(Collectors.toList());
+
+		if (searchValue != null) {
+			String search = searchValue.toLowerCase();
+			listings = listings.stream().filter((listing) -> listing.getListingName().toLowerCase().contains(search)
+                    || listing.getSellerName().toLowerCase().contains(search)).collect(Collectors.toList());
+		}
+
+		if (filter == FilterType.POKEMON) {
+			listings = listings.stream().filter((listing) -> listing instanceof PokemonListing).collect(Collectors.toList());
+		} else if (filter == FilterType.ITEMS) {
+			listings = listings.stream().filter((listing) -> listing instanceof ItemListing).collect(Collectors.toList());
+		}
+
+		if (sort.equals(Sort.PRICE)) {
+			listings.sort(Comparator.comparingDouble(Listing::getPrice));
+		} else if (sort.equals(Sort.DATE)) {
+			listings.sort(Comparator.comparingLong(Listing::getEndTime));
+		} else if (sort.equals(Sort.NAME)) {
+			listings.sort(Comparator.comparing(Listing::getListingName));
+		}
 
 		for (Listing listing : listings) {
 			List<Component> lore = ListingInfo.parse(listing);
@@ -96,16 +119,19 @@ public class AllListings {
 		ChestTemplate template = ChestTemplate.builder(6)
 				.rectangle(0, 0, 5, 9, placeholder)
 				.fill(Filler.getButton())
-				.set(48, SeePokemonListings.getButton())
+				.set(48, SortButton.getButton(filter, sort))
 				.set(49, ManageListings.getButton())
-				.set(50, SeeItemListings.getButton())
+				.set(50, FilterButton.getButton(filter, sort))
 				.set(53, NextPage.getButton())
 				.set(45, PreviousPage.getButton())
-				.set(52, RelistAll.getButton())
 				.build();
 
 		LinkedPage page = PaginationHelper.createPagesFromPlaceholders(template, buttons, null);
-		page.setTitle("§3" + Gts.language.getTitle());
+		if (searchValue != null) {
+			page.setTitle(Gts.language.getFilteredListingsTitle().replaceAll("%search%", searchValue));
+		} else {
+			page.setTitle("§3" + Gts.language.getTitle());
+		}
 
 		setPageTitle(page);
 
